[gd_scene load_steps=14 format=3 uid="uid://bvlifur6woann"]

[ext_resource type="Script" path="res://scripts/actors/player/player.gd" id="1_427t1"]
[ext_resource type="Script" path="res://scripts/structure/state_machine/state_machine.gd" id="1_wo1xs"]
[ext_resource type="Script" path="res://scripts/actors/player/states/ps_ground.gd" id="3_rowm6"]
[ext_resource type="Script" path="res://scripts/actors/player/player_movement.gd" id="4_3yoex"]
[ext_resource type="Script" path="res://scripts/actors/player/modules/m_player_ground.gd" id="4_k440i"]
[ext_resource type="Script" path="res://scripts/actors/player/states/ps_jumping.gd" id="4_u23o6"]
[ext_resource type="Script" path="res://scripts/actors/player/states/ps_in_air.gd" id="5_ac5n7"]
[ext_resource type="Script" path="res://scripts/actors/player/modules/m_player_air.gd" id="6_fsg8v"]
[ext_resource type="Script" path="res://scripts/actors/player/modules/m_player_jump.gd" id="9_x01eq"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_x0y5c"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gak2h"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_t6kps"]
material = SubResource("StandardMaterial3D_gak2h")

[sub_resource type="BoxShape3D" id="BoxShape3D_mptt7"]
size = Vector3(1, 1.98367, 1)

[node name="player" type="CharacterBody3D" groups=["player"]]
disable_mode = 1
axis_lock_angular_x = true
platform_wall_layers = 1
script = ExtResource("1_427t1")

[node name="coyote_time" type="Timer" parent="."]

[node name="model" type="Node3D" parent="."]

[node name="mesh" type="MeshInstance3D" parent="model"]
mesh = SubResource("CapsuleMesh_x0y5c")

[node name="meshbox" type="MeshInstance3D" parent="model/mesh"]
transform = Transform3D(0.406248, 0, 0, 0, 1, 0, 0, 0, 0.327678, 0, 0.0128009, 0.48472)
mesh = SubResource("BoxMesh_t6kps")
skeleton = NodePath("../..")

[node name="collision_box" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_mptt7")

[node name="state_machine" type="Node" parent="."]
script = ExtResource("1_wo1xs")
initial_state = NodePath("ground")

[node name="ground" type="Node" parent="state_machine"]
script = ExtResource("3_rowm6")

[node name="jumping" type="Node" parent="state_machine"]
script = ExtResource("4_u23o6")

[node name="in_air" type="Node" parent="state_machine"]
script = ExtResource("5_ac5n7")

[node name="modules" type="Node" parent="."]

[node name="movement" type="Node" parent="modules"]
script = ExtResource("4_3yoex")

[node name="ground_movement" type="Node" parent="modules/movement"]
script = ExtResource("4_k440i")

[node name="air_movement" type="Node" parent="modules/movement"]
script = ExtResource("6_fsg8v")
accel = 11.0
deaccel = 45.0
max_speed = 6.0

[node name="jump_movement" type="Node" parent="modules/movement"]
script = ExtResource("9_x01eq")
jump_height = 5.0
jump_time = 6.0
